# projet-midi-comp

./: .gitignore  LICENSE  README.md  main.py  progression.mid  pyproject.toml  requirements.txt
chord_midi/: __init__.py  __main__.py  styles.json
chord_midi/gui/: __init__.py  main_window.py  note_item.py  piano_roll.py
chord_midi/midi/: progression.py
